# playwright_automation

./: Readme.md  docker-compose.yaml  package-lock.json  package.json  turbo.json
apps/backend/: .gitignore  Dockerfile  package.json  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/routers/: __init__.py  browser.py
apps/backend/app/schema/: __init__.py  browser.py
apps/backend/app/services/: __init__.py  browser.py  constants.py  utils.py
apps/frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/lib/: config.ts
apps/frontend/src/lib/actions/: dropbox.ts
