[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marcus0086 <guptamarcus42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.115.0", extras = ["standard"] }
playwright = "^1.47.0"
pydantic = "^2.9.2"
uvicorn = { version = "^0.31.0", extras = ["standard"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
